# libretro_core_sdl2_compact_sample

./: CMakeLists.txt  README.md  build.bat
src/: main.c
